# gridscale-ansible-collection

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  galaxy.yml  pyproject.toml  requirements_dev.txt
.github/workflows/: docs-push.yaml  docs.yaml  pre-commit.yaml  tests.yaml
.github/workflows/docs/: antsibull-docs.cfg  conf.py
built-docs/: antsibull-docs.cfg
meta/: runtime.yml
plugins/inventory/: gs_inventory.py
plugins/module_utils/: version.py
tests/unit/plugins/inventory/: test_gs_inventory.py
tests/unit/plugins/inventory/files/test_fetch_servers/: servers.json  servers_expected_all.json  servers_expected_one.json
tests/unit/plugins/inventory/files/test_populate/: servers_expected_01.json  servers_expected_02.json  servers_expected_03.json  servers_expected_04.json  servers_expected_05.json
tests/unit/plugins/module_utils/: test_version.py
